--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="person_title">내정보</string>
     <string name="booking_title">예약내역</string>
     <string name="more_title">더보기</string>
+
+    <string name="menu_kor">한식</string>
+    <string name="menu_jp">일식</string>
+    <string name="menu_ch">중식</string>
+    <string name="menu_wf">양식</string>
+    <string name="menu_best">명예의전당</string>
+    <string name="menu_cafe">디저트/카페</string>
+    <string name="menu_beer">포차</string>
+
 </resources>
