--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="person_information">내정보 관리</string>
     <string name="person_sign_in">로그인</string>
     <string name="person_sign_up">회원가입</string>
-    <string name="person_coupon">쿠폰</string>
+    <string name="person_like">찜</string>
     <string name="person_review">리뷰</string>
 
 </resources>
