--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="person_sign_up">회원가입</string>
     <string name="person_like">찜</string>
     <string name="person_review">리뷰</string>
+    <string name="title_activity_login">LoginActivity</string>
 
 </resources>
