--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,12 @@
 
     <string name="store_info_wait_btn">번호표 뽑기</string>
     <string name="store_info_wait_people">대기 인원</string>
+    
+    <string name="more_notice">공지사항</string>
+    <string name="more_event">이벤트</string>
+    <string name="more_setting">환경설정</string>
+    <string name="more_as">고객센터</string>
+    <string name="more_version">현재버전</string>
+
 
 </resources>
