--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,21 +14,18 @@
     <string name="menu_beer">포차</string>
     <string name="menu_map">지도</string>
 
-    <string name="person_alarm">알림</string>
     <string name="person_information">내정보 관리</string>
-    <string name="person_sign_in">로그인</string>
-    <string name="person_sign_up">회원가입</string>
-    <string name="person_like">찜</string>
-    <string name="person_review">리뷰</string>
 
     <string name="store_info_wait_btn">번호표 뽑기</string>
     <string name="store_info_wait_people">대기 인원</string>
     
     <string name="more_notice">공지사항</string>
     <string name="more_event">이벤트</string>
-    <string name="more_setting">환경설정</string>
     <string name="more_as">고객센터</string>
-    <string name="more_version">현재버전</string>
+    <string name="more_version">현재버전 v1.0.3</string>
+
+    <string name="search_hint">가게 이름</string>
+    <string name="search_title">검색</string>
 
 
 </resources>
